--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "_from": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-  "_id": "iobroker.exchangerates@0.0.1",
+  "_id": "iobroker.exchangerates@0.0.5",
   "_inBundle": false,
   "_integrity": "sha512-1MLlrLsfzFKBrPRmvPi1yGx6mqc0/FnYCiEm9f6C9iPm0SD+8QNz8Hebrgy5/jnaWt3T7Qy+A9nYi3K3JqwsVw==",
   "_location": "/iobroker.exchangerates",
@@ -35,24 +35,18 @@
   "deprecated": false,
   "description": "Exchange rates",
   "devDependencies": {
-    "@iobroker/testing": "^1.3.0",
-    "@types/chai": "^4.2.5",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/gulp": "^4.0.6",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^10.17.6",
-    "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^7.5.1",
-    "@types/sinon-chai": "^3.2.3",
-    "axios": "^0.19.0",
+    "@iobroker/testing": "^1.1.10",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^6.7.2",
-    "gulp": "^4.0.2",
-    "mocha": "^6.2.2",
-    "proxyquire": "^2.1.3",
-    "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0"
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^3.0.0",
+    "grunt-http": "^2.2.0",
+    "grunt-jscs": "^3.0.1",
+    "grunt-replace": "^1.0.1",
+    "mocha": "^6.0.2"
   },
   "homepage": "https://github.com/instalator/ioBroker.exchangerates",
   "keywords": [
