--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_script:
   - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
   - npm -v
+  - npm install winston@3.2.1
+  - 'npm install https://github.com/ioBroker/ioBroker.js-controller/tarball/master --production'
 env:
   - CXX=g++-6
 addons:
@@ -19,7 +21,3 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-6
-script:
-  - 'npm run test:package'
-  - 'npm run test:unit'
-  - 'npm run test:integration'
