--- a/package.json
+++ b/package.json
@@ -1,25 +1,3 @@
-{
-  "_from": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-  "_id": "iobroker.exchangerates@0.0.5",
-  "_inBundle": false,
-  "_integrity": "sha512-1MLlrLsfzFKBrPRmvPi1yGx6mqc0/FnYCiEm9f6C9iPm0SD+8QNz8Hebrgy5/jnaWt3T7Qy+A9nYi3K3JqwsVw==",
-  "_location": "/iobroker.exchangerates",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "remote",
-    "raw": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-    "rawSpec": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-    "saveSpec": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-    "fetchSpec": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1"
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-  "_shasum": "834a4ba857c58745ba92ab19be8dedcaed5a5ac7",
-  "_spec": "https://github.com/instalator/ioBroker.exchangerates/tarball/c78c148d8317b3c52ef7946025d97e7630d0fef1",
-  "_where": "/opt/iobroker",
   "author": {
     "name": "instalator",
     "email": "vvvalt@mail.ru"
@@ -35,9 +13,24 @@
   "deprecated": false,
   "description": "Exchange rates",
   "devDependencies": {
+    "@types/chai": "^4.2.5",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/gulp": "^4.0.6",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.11",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^7.5.1",
+    "@types/sinon-chai": "^3.2.3",
+    "axios": "^0.19.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^6.7.0",
     "gulp": "^4.0.2",
     "mocha": "^6.2.2",
-    "chai": "^4.2.0"
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
+    "tslint": "^5.20.1"
   },
   "homepage": "https://github.com/instalator/ioBroker.exchangerates",
   "keywords": [
@@ -52,12 +45,12 @@
     "url": "git+https://github.com/instalator/ioBroker.exchangerates.git"
   },
   "scripts": {
-    "lint": "eslint",
-    "test": "npm run test:js && npm run test:package",
-    "test:integration": "mocha test/integration --exit",
     "test:js": "mocha --opts test/mocha.custom.opts",
-    "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit"
+    "test:package": "mocha test/testPackageFiles.js --exit",
+    "test:iobroker": "mocha test/testStartup.js --exit",
+    "test": "npm run test:js && npm run test:package",
+    "lint": "npm run lint:ts \"src/**/*.ts\"",
+    "lint:ts": "tslint"
   },
   "version": "0.0.5"
 }
