--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.0.11",
   "author": {
     "name": "instalator",
     "email": "vvvalt@mail.ru"
@@ -52,6 +53,5 @@
     "test": "npm run test:js && npm run test:package",
     "lint": "npm run lint:ts \"src/**/*.ts\"",
     "lint:ts": "tslint"
-  },
-  "version": "0.0.10"
+  }
 }
