--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.12",
+  "version": "0.0.13",
   "author": {
     "name": "instalator",
     "email": "vvvalt@mail.ru"
@@ -7,7 +7,7 @@
   "bugs": {
     "url": "https://github.com/instalator/ioBroker.exchangerates/issues"
   },
-  "bundleDependencies": false,
+  "bundleDependencies": [],
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
     "xml2js": "^0.4.22"
