--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.13",
+  "version": "0.0.14",
   "author": {
     "name": "instalator",
     "email": "vvvalt@mail.ru"
@@ -9,30 +9,30 @@
   },
   "bundleDependencies": [],
   "dependencies": {
-    "@iobroker/adapter-core": "^1.0.3",
+    "@iobroker/adapter-core": "^2.4.0",
     "xml2js": "^0.4.22"
   },
   "deprecated": false,
   "description": "Exchange rates",
   "devDependencies": {
-    "@types/chai": "^4.2.5",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/gulp": "^4.0.6",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.11",
+    "@iobroker/testing": "^2.4.2",
+    "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/gulp": "^4.0.8",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.25",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^7.5.1",
-    "@types/sinon-chai": "^3.2.3",
+    "@types/sinon": "^9.0.10",
+    "@types/sinon-chai": "^3.2.5",
     "axios": "^0.21.1",
-    "chai": "^4.2.0",
+    "chai": "^4.3.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.7.0",
+    "eslint": "^7.19.0",
     "gulp": "^4.0.2",
-    "mocha": "^6.2.2",
+    "mocha": "^8.2.1",
     "proxyquire": "^2.1.3",
-    "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0",
-    "tslint": "^5.20.1"
+    "sinon": "^9.2.4",
+    "sinon-chai": "^3.5.0"
   },
   "homepage": "https://github.com/instalator/ioBroker.exchangerates",
   "keywords": [
@@ -47,11 +47,11 @@
     "url": "git+https://github.com/instalator/ioBroker.exchangerates.git"
   },
   "scripts": {
-    "test:js": "mocha --opts test/mocha.custom.opts",
-    "test:package": "mocha test/testPackageFiles.js --exit",
-    "test:iobroker": "mocha test/testStartup.js --exit",
+    "test:js": "mocha \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
+    "test:package": "mocha test/package --exit",
+    "test:unit": "mocha test/unit --exit",
+    "test:integration": "mocha test/integration --exit",
     "test": "npm run test:js && npm run test:package",
-    "lint": "npm run lint:ts \"src/**/*.ts\"",
-    "lint:ts": "tslint"
+    "lint": "eslint"
   }
 }
