--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "name": "iobroker.exchangerates",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/instalator/ioBroker.exchangerates.git"
+    "url": "https://github.com/instalator/ioBroker.exchangerates.git"
   },
   "scripts": {
     "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
